--- a/style.css
+++ b/style.css
@@ -80,12 +80,16 @@ h3 {
   color: #00416a;
 }
 input {
+  position: relative;
+  z-index: 1;
   -webkit-box-shadow: 0 0 0 2px #ff6d00;
   box-shadow: 0 0 0 2px #ff6d00;
   outline: none;
   font-family: inherit;
 }
 .dropdown {
+  position: relative;
+  z-index: 2;
   width: 100%;
   background: #fff;
   color: #000;
